--- a/SCfCL-02-Lecture/Prac/SCfCL_02_Prac.ipynb
+++ b/SCfCL-02-Lecture/Prac/SCfCL_02_Prac.ipynb
@@ -1,4 +1,18 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -6,7 +20,7 @@
         "id": "UhFuNEeJHw78"
       },
       "source": [
-        "課題1：年齢を入力して，18歳未満なら「未成年」，18歳以上なら「成年」と出力するプログラムを書いてください．  \n",
+        "課題3：整数を入力して，その数値が偶数なら「偶数」，奇数なら「奇数」と出力するプログラムを書いてください．  \n",
         "条件：`if`文を使ってください．"
       ]
     },
@@ -44,8 +58,7 @@
         "id": "ysctT0c6H34v"
       },
       "source": [
-        "課題3：整数を入力して，その数値が偶数なら「偶数」，奇数なら「奇数」と出力するプログラムを書いてください．  \n",
-        "条件：`if`文を使ってください．"
+        "課題3：パスワードを入力し，正しいパスワード（例: “python123”）であれば「ログイン成功」，間違っていれば「パスワードが違います」と表示するプログラムを作成してください．"
       ]
     },
     {
@@ -100,19 +113,5 @@
       "outputs": [],
       "source": []
     }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
