--- a/SCfCL-06-Lecture/Prac/SCfCL_06_Prac.ipynb
+++ b/SCfCL-06-Lecture/Prac/SCfCL_06_Prac.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -39,6 +40,28 @@
         "\n",
         "このノートブックは，授業中に作成したフォルダを利用してください．"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## OpenPyXLのバージョンを下げる\n",
+        "授業内で実施したようにOpenPyXLのバージョンを下げる必要があります．  \n",
+        "必ず一番最初に以下のセルを実行してください．"
+      ],
+      "metadata": {
+        "id": "HZxqpUhSoebw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install openpyxl==3.1.3"
+      ],
+      "metadata": {
+        "id": "E3UhRYL0oXq1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
